deleted seperate css
deleted spereate css
added whole css (external) to three pages

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -3,8 +3,9 @@
 		<title>
 			christian
 		</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
-	<body style="background-color:black;">
+	<body>
 		<nav>				
 			<a href="index.html" />
 					Home
@@ -15,7 +16,7 @@
 				projects
 			</a>
 		</nav>
-		<section style="color:silver;">
+		<section>
 			my name is christian contreras and I am sophmore.i am 15 years old and i have a 5 years old brother. i enjoy many technical and mechanical subjects. 
 			</br>
 			i can be very creative when is needed. i am very excited for this class.
