--- a/projects.html
+++ b/projects.html
@@ -3,9 +3,10 @@
 		<title>
 			christian's projects
 		</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
-	<body style="background-color:silver;">
-		<section style="color:cyan;">
+	<body>
+		<section>
 			<p>
 				projects:
 				</br>
