--- a/projects.html
+++ b/projects.html
@@ -7,30 +7,32 @@
 	</head>
 	<body>
 		<section>
-			<p>
-				projects:
-				</br>
-				<ul>
-					<li>
-						<nav>
-							<a href="aboutMe.html" />
-								About ME
-							</a>
-						</nav>
-					</li>
-					<li>
-						<nav>
-							<a href="index.html" />
-								Home
-							</a>	
-						</nav>
-					</li>
-					<li>
-						<nav>
-							<a href="projects.html" />
-								projects
-							</a>
-						<nav>
-					</li>
+			<div>
+				<p>
+					projects:
+					</br>
+					<ul>
+						<li>
+							<nav>
+								<a href="aboutMe.html" />
+									About ME
+								</a>
+							</nav>
+						</li>
+						<li>
+							<nav>
+								<a href="index.html" />
+									Home
+								</a>	
+							</nav>
+						</li>
+						<li>
+							<nav>
+								<a href="projects.html" />
+									projects
+								</a>
+							<nav>
+						</li>
+			</div>
 		</section>
 <html>
