--- a/index.html
+++ b/index.html
@@ -6,24 +6,28 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<nav>
-				Home |
-			<a href="aboutMe.html" />
-				About ME
-			</a>
-		</nav>
-		<nav>
-			<a href="projects.html" />
-				projects
-			</a>
-		</nav>
-		<section>
-			Fatezero
-		</section>
-		<section>
-			my name is christian
-			</br>
-				i am student
-		</section>	
+		<div>
+			<nav>
+					Home |
+				<a href="aboutMe.html" />
+					About ME
+				</a>
+			</nav>
+			<nav>
+				<a href="projects.html" />
+					projects
+				</a>
+			</nav>
+			<section>
+				Fatezero
+			</section>
+			<section>
+				my name is christian
+				</br>
+					i am student
+				</br>
+				<img src="http://img1.ak.crunchyroll.com/i/spire3/2ee05df6e44530437069955b71f09daf1317839234_full.jpg"
+			</section>	
+		</div>
 	</body>
 </html>
