added pic and class

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				</br>
 					i am student
 				</br>
-				<img src="http://img1.ak.crunchyroll.com/i/spire3/2ee05df6e44530437069955b71f09daf1317839234_full.jpg"
+				<img src="http://img1.ak.crunchyroll.com/i/spire3/2ee05df6e44530437069955b71f09daf1317839234_full.jpg" />
 			</section>	
 		</div>
 	</body>
