--- a/projects.html
+++ b/projects.html
@@ -17,21 +17,20 @@
 								<a href="aboutMe.html" />
 									About ME
 								</a>
-							</nav>
 						</li>
 						<li>
-							<nav>
 								<a href="index.html" />
 									Home
-								</a>	
-							</nav>
+								</a>
 						</li>
 						<li>
-							<nav>
 								<a href="projects.html" />
 									projects
 								</a>
-							<nav>
+						</li>
+						<li>
+								<a href="magic8ball.html" />
+							</nav>
 						</li>
 			</section>
 		</div>
