--- a/projects.html
+++ b/projects.html
@@ -30,6 +30,8 @@
 						</li>
 						<li>
 								<a href="magic8ball.html" />
+									magic8ball
+								</a>
 							</nav>
 						</li>
 			</section>
