--- a/magic8ball.html
+++ b/magic8ball.html
@@ -8,7 +8,7 @@
 	<body>
 		<div>
 			<nav>
-				<a href+"index.html" ?>
+				<a href="index.html" ?>
 					Home |
 				</a>
 				<a href="aboutMe.html" />
@@ -21,12 +21,11 @@
 				</a>
 			</nav>
 			<section>
-				<img src="" />
-				
+				<img src="magic8ballfront.jpg" />
 				<p>
 					click the magic 8 ball to tell your fortune.
 				</p>
-				</section>
+			</section>
 		</div>
 	</body>
 </html>
