added div container id and created half of tic tac toe html page

--- a/fateZero.html
+++ b/fateZero.html
@@ -6,13 +6,15 @@
 		</title>
 	</head>
 	<body>
-		<section>
-			Fatezero
-		</section>
-		<section>
-			my name is christian
-			</br>
-				i am student
-		</section>	
+		<div id="contianer">
+			<section>
+				Fatezero
+			</section>
+			<section>
+				my name is christian
+				</br>
+					i am student
+			</section>	
+		</div>
 	</body>
 </html>
