--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<div>
+		<div id="container">
 			<section>
 				<p>
 					projects:
@@ -32,8 +32,13 @@
 								<a href="magic8ball.html" />
 									magic8ball
 								</a>
+						<li>
+								<a href="tictactoe.html" />
+									tictactoe
+								</a>
 							</nav>
 						</li>
+						
 			</section>
 		</div>
 <html>
