--- a/magic8ball.html
+++ b/magic8ball.html
@@ -7,7 +7,7 @@
 		<script src="script.js"></script>
 	</head>
 	<body>
-		<div>
+		<div id="container">
 			<nav>
 				<a href="index.html" ?>
 					Home |
