start of clickable circle. added circle and enabled hidden.

--- a/projects.html
+++ b/projects.html
@@ -32,12 +32,20 @@
 								<a href="magic8ball.html" />
 									magic8ball
 								</a>
+						</li>
 						<li>
 								<a href="tictactoe.html" />
 									tictactoe
 								</a>
+						</li>
+						<li>
+								<a href="clickblecircle.html" />
+									clickablecircle
+								</a>
+						</li>
 							</nav>
 						</li>
+						
 						
 			</section>
 		</div>
