circle clickable moves position lab

--- a/clickblecircle.html
+++ b/clickblecircle.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<script src="clickblecircle.js"></script>
 	</head>
-	<body>
+	<body onload="randomCircle()">
 		<div id="container">
 			<nav>
 				<a href="index.html" />	
