added gallery project lab

--- a/projects.html
+++ b/projects.html
@@ -43,6 +43,11 @@
 									clickablecircle
 								</a>
 						</li>
+						<li>
+								<a href="Gallery.html" />
+									Gallery
+								</a>
+						</li>
 							</nav>
 						</li>
 						
