added left right button on gallery

--- a/Gallery.html
+++ b/Gallery.html
@@ -21,6 +21,10 @@
 					projects
 				</a>
 			</nav>
+			<section>
+				<input id="left" type="button" value="<--" onclick=()/>
+				<input id="right" type="button" value="-->" onclick=()/>
+			</section>
 		</div>
 	</body>
 </html>
