added pic to gallery and made gallery switch from image to imaged.

--- a/Gallery.html
+++ b/Gallery.html
@@ -22,8 +22,11 @@
 				</a>
 			</nav>
 			<section>
-				<input id="left" type="button" value="<--" onclick=()/>
-				<input id="right" type="button" value="-->" onclick=()/>
+				<input id="left" type="button" value="<--" onclick="prev();"/>
+				<input id="right" type="button" value="-->" onclick="next();"/>
+			</section>
+			<section>
+				<img id="gallery" src="Sword-art-online-kirito-swords_Dragon_Slayers.jpg" />
 			</section>
 		</div>
 	</body>
