added background wallpaper and opacity white border.

--- a/animehome.html
+++ b/animehome.html
@@ -3,7 +3,7 @@
 		<title>
 			Fatezero
 		</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="style.css" href="anime.js">
 	</head>
 	<body>
 		<div id="container">
@@ -15,7 +15,7 @@
 				</a>
 			</nav>
 			<section>
-			<div id="test" onmouseover="transformLink();" onmouseout="revertLink()">
+			<div id="test" onmouseover="transformLink();" onmouseout="revertLink();">
 			<a href="animeproject.html"/>
 				Fate/Zero(Dub)
 			</div>
