--- a/animeproject.html
+++ b/animeproject.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 		<div id="container">
+		
 			<nav>
 			<a href="animehome.html"/>
 					Home
@@ -65,6 +66,9 @@
 				<section>
 					<img src="https://vignette.wikia.nocookie.net/shingekinokyojin/images/d/d8/Attack_on_Titan_Season_1.jpg/revision/latest/scale-to-width-down/333?cb=20171029222842" />
 				</section>
+        <section>
+          
+        </section>
 		</div>
 	</body>
 </html>
