added anime project to project list

--- a/projects.html
+++ b/projects.html
@@ -48,6 +48,11 @@
 									Gallery
 								</a>
 						</li>
+						<li>
+								<a href="animeproject.html" />
+									Anime project
+								</a>
+						</li>
 							</nav>
 						</li>
 						
