--- a/animeproject.html
+++ b/animeproject.html
@@ -9,7 +9,7 @@
 		<div id="container">
 		
 			<nav>
-			<a href="animehome.html"/>
+			<a href="animeproject2.html"/>
 					Home
 			</a>
 			</nav>
