--- a/animeproject2.html
+++ b/animeproject2.html
@@ -26,7 +26,7 @@
 			</a>
 			</section>
 			<section>
-				<img src="http://img1.ak.crunchyroll.com/i/spire3/2ee05df6e44530437069955b71f09daf1317839234_full.jpg" />
+				<img src="square fate.jpg" />
 			</section>
 			</div>
 			<div class="box2"
@@ -36,7 +36,7 @@
 				</a>
 				</section>
 				<section>
-					<img src="https://images4.alphacoders.com/632/thumb-1920-632068.jpg" />
+					<img src="SAO square.jpg" />
 				</section>
 			</div>
 			<div class="box2">	
@@ -46,7 +46,7 @@
 				</a>
 				</section>
 				<section>
-					<img src="https://i.ytimg.com/vi/wNxBaOx-oAA/maxresdefault.jpg" />
+					<img src="date a live square.jpg" />
 				</section>
 			</div>
 			<div class="box2">	
@@ -66,7 +66,7 @@
 				</a>
 				</section>
 				<section>
-					<img src="http://static.tvtropes.org/pmwiki/pub/images/tokyo_ghoul_5787.jpg" />
+					<img src="tokyo square.jpg" />
 				</section>
 			</div>	
 			<div class="box2">
