anime attack on titian

--- a/animeproject2.html
+++ b/animeproject2.html
@@ -76,7 +76,7 @@
 				</a>
 				</section>
 				<section>
-					<img src="https://vignette.wikia.nocookie.net/shingekinokyojin/images/d/d8/Attack_on_Titan_Season_1.jpg/revision/latest/scale-to-width-down/333?cb=20171029222842" />
+					<img src="attack of titan.jpg" />
 				</section>
 			</div>			
         <section>
