--- a/animeproject2.html
+++ b/animeproject2.html
@@ -56,7 +56,7 @@
 				</a>
 				</section>
 				<section>
-					<img src="https://images6.alphacoders.com/512/thumb-1920-512323.jpg" />
+					<img src="No Game No Life.jpg" />
 				</section>	
 			</div>
 			<div class="box2">	
@@ -78,10 +78,39 @@
 				<section>
 					<img src="attack of titan.jpg" />
 				</section>
-			</div>			
-        <section>
-			</div>
-        </section>
+				<div class="box2">
+				<section>
+					<a href="http://kissanime.ru/Anime/Shokugeki-no-Souma"/>
+						Shokugeki no Souma
+					</a>
+					</section>
+					<section>
+						<img src="Food Wars.jpg" />
+					</section>
+				</div>	
+		  <div class="box2">
+				<section>
+					<a href="http://kissanime.ru/Anime/Re-Zero-kara-Hajimeru-Isekai-Seikatsu"/>
+						Re:ZERO 
+					</a>
+					</section>
+					<section>
+						<img src="Re_Zero.jpg" />
+					</section>
+				</div>
+		  <div class="box2">
+				<section>
+					<a href="http://kissanime.ru/Anime/One-Piece"/>
+						One Piece
+					</a>
+					</section>
+					<section>
+						<img src="one piece.jpg" />
+					</section>
+				</div>			
+			<section>
+				</div>
+			</section>
 		</div>
 	</body>
 </html>
