fix and add anime

--- a/animeproject2.html
+++ b/animeproject2.html
@@ -110,7 +110,107 @@
 				</div>			
 			<section>
 				</div>
+		<div class="box2">
+			<section>
+				<a href="http://kissanime.ru/Anime/Re-Zero-kara-Hajimeru-Isekai-Seikatsu"/>
+					Re:ZERO 
+				</a>
+				</section>
+				<section>
+					<img src="" />
+				</section>
+			</div>
+      <div class="box2">
+			<section>
+				<a href="http://kissanime.ru/Anime/One-Piece"/>
+					One Piece
+				</a>
+				</section>
+				<section>
+					<img src="" />
+				</section>
+			</div>
+       <div class="box2">
+			<section>
+				<a href="http://kissanime.ru/Anime/Mahouka-Koukou-no-Rettousei"/>
+					Magic high school
+				</a>
+				</section>
+				<section>
+					<img src="" />
+				</section>
+			</div>
+      <div class="box2">
+			<section>
+				<a href="http://kissanime.ru/Anime/Bleach"/>
+					Bleach
+				</a>
+				</section>
+				<section>
+					<img src="" />
+				</section>
+			</div>
+       <div class="box2">
+			<section>
+				<a href="http://kissanime.ru/Anime/Fairy-Tail"/>
+					Fairy Tail
+				</a>
+				</section>
+				<section>
+					<img src="" />
+				</section>
+			</div>
+        <div class="box2">
+			<section>
+				<a href="http://kissanime.ru/Anime/Haikyuu-Second-Season"/>
+					Haikyu!
+				</a>
+				</section>
+				<section>
+					<img src="" />
+				</section>
+			</div>
+        <div class="box2">
+			<section>
+				<a href="http://kissanime.ru/Anime/Naruto"/>
+					Naruto
+				</a>
+				</section>
+				<section>
+					<img src="" />
+				</section>
+			</div>
+         <div class="box2">
+			<section>
+				<a href="http://kissanime.ru/Anime/Dragon-Ball-Dub"/>
+					Dragonball
+				</a>
+				</section>
+				<section>
+					<img src="" />
+				</section>
+			</div>
+         <div class="box2">
+			<section>
+				<a href="http://kissanime.ru/Anime/Pokemon-Dub"/>
+				Pokemon
+				</a>
+				</section>
+				<section>
+					<img src="" />
+				</section>
+			</div>
+               <div class="box2">
+			<section>
+				<a href="http://kissanime.ru/Anime/Death-Note"/>
+				Death Note
+				</a>
+				</section>
+				<section>
+					<img src="" />
+				</section>
 			</section>
 		</div>
+		
 	</body>
 </html>
