finished anime project

--- a/animeproject2.html
+++ b/animeproject2.html
@@ -78,6 +78,7 @@
 				<section>
 					<img src="attack of titan.jpg" />
 				</section>
+				</div>
 				<div class="box2">
 				<section>
 					<a href="http://kissanime.ru/Anime/Shokugeki-no-Souma"/>
@@ -90,24 +91,13 @@
 				</div>	
 		  <div class="box2">
 				<section>
-					<a href="http://kissanime.ru/Anime/Re-Zero-kara-Hajimeru-Isekai-Seikatsu"/>
-						Re:ZERO 
-					</a>
-					</section>
-					<section>
-						<img src="Re_Zero.jpg" />
-					</section>
-				</div>
-		  <div class="box2">
-				<section>
 					<a href="http://kissanime.ru/Anime/One-Piece"/>
 						One Piece
 					</a>
 					</section>
 					<section>
 						<img src="one piece.jpg" />
-					</section>
-				</div>			
+					</section>			
 			<section>
 				</div>
 		<div class="box2">
@@ -117,17 +107,17 @@
 				</a>
 				</section>
 				<section>
-					<img src="" />
+					<img src="Re_Zero.jpg" />
 				</section>
 			</div>
       <div class="box2">
 			<section>
-				<a href="http://kissanime.ru/Anime/One-Piece"/>
-					One Piece
+				<a href="http://kissanime.ru/Anime/Ao-no-Exorcist-Dub"/>
+					Blue Exorcist
 				</a>
 				</section>
 				<section>
-					<img src="" />
+					<img src="blue exorcist.jpg" />
 				</section>
 			</div>
        <div class="box2">
@@ -137,7 +127,7 @@
 				</a>
 				</section>
 				<section>
-					<img src="" />
+					<img src="magic high school.jpg" />
 				</section>
 			</div>
       <div class="box2">
@@ -147,7 +137,7 @@
 				</a>
 				</section>
 				<section>
-					<img src="" />
+					<img src="Bleach.jpg" />
 				</section>
 			</div>
        <div class="box2">
@@ -157,7 +147,7 @@
 				</a>
 				</section>
 				<section>
-					<img src="" />
+					<img src="Fairy Tale.jpg" />
 				</section>
 			</div>
         <div class="box2">
@@ -167,7 +157,7 @@
 				</a>
 				</section>
 				<section>
-					<img src="" />
+					<img src="Haikyu.jpg" />
 				</section>
 			</div>
         <div class="box2">
@@ -177,7 +167,7 @@
 				</a>
 				</section>
 				<section>
-					<img src="" />
+					<img src="naruto.jpg" />
 				</section>
 			</div>
          <div class="box2">
@@ -187,7 +177,7 @@
 				</a>
 				</section>
 				<section>
-					<img src="" />
+					<img src="dragonball.jpg" />
 				</section>
 			</div>
          <div class="box2">
@@ -197,7 +187,7 @@
 				</a>
 				</section>
 				<section>
-					<img src="" />
+					<img src="Pokemon-20-I-Choose-You-Movie-Pokemon-Speaks.jpg" />
 				</section>
 			</div>
                <div class="box2">
@@ -207,10 +197,51 @@
 				</a>
 				</section>
 				<section>
-					<img src="" />
+					<img src="death note.jpg" />
 				</section>
+				</div>
+				<div class="box2">
+			<section>
+				<a href="http://kissanime.ru/Anime/Citrus-Dub"/>
+				Citrus
+				</a>
+				</section>
+				<section>
+					<img src="citrus.jpg" />
+				</section>
+				</div>
+				<div class="box2">
+			<section>
+				<a href="http://kissanime.ru/Anime/Poputepipikku-Dub"/>
+				Pop Team Epic 
+				</a>
+				</section>
+				<section>
+					<img src="pop team epic.png" />
+				</section>
+				</div>
+				<div class="box2">
+			<section>
+				<a href="http://kissanime.ru/Anime/Angel-Beats-Dub"/>
+				Angel Beats
+				</a>
+				</section>
+				<section>
+					<img src="angel beats.jpg" />
+				</section>
+				</div>
+				<div class="box2">
+			<section>
+				<a href="http://kissanime.ru/Anime/Detective-Conan-Dub"/>
+				Detective Conan
+				</a>
+				</section>
+				<section>
+					<img src="case closed.jpg" />
+				</section>
+				</div>
 			</section>
 		</div>
-		
+		</div>
 	</body>
 </html>
