--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
 								</a>
 						</li>
 						<li>
-								<a href="animeproject.html" />
+								<a href="animeproject2.html" />
 									Anime project
 								</a>
 						</li>
