fixed pic re_zero and pop team epic

--- a/animeproject2.html
+++ b/animeproject2.html
@@ -107,7 +107,7 @@
 				</a>
 				</section>
 				<section>
-					<img src="Re_Zero.jpg" />
+					<img src="RE_Zero.jpg" />
 				</section>
 			</div>
       <div class="box2">
@@ -217,7 +217,7 @@
 				</a>
 				</section>
 				<section>
-					<img src="pop team epic.png" />
+					<img src="pop team epic.jpg" />
 				</section>
 				</div>
 				<div class="box2">
