--- a/animeproject2.html
+++ b/animeproject2.html
@@ -107,7 +107,7 @@
 				</a>
 				</section>
 				<section>
-					<img src="http://eiga.k-img.com/images/anime/program/104656/photo/78e263d7e7062009/320.jpg?1480393378" />
+					<img src="RE_zero.jpg" />
 				</section>
 			</div>
       <div class="box2">
